# python-with-fastapi

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 5b1509ffd4f8_new_migrations.py
app/: crud.py  database.py  logger.py  models.py  schemas.py
app/routers/: items.py
