[tool.poetry]
name = "python-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Vitor Carlos <vitorcarlos1312@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "uvicorn src.main:app --reload"


